# Bezier-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: deploy.yml  tests.yml
interactive-docs/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  vue.config.js
interactive-docs/public/: style.css
interactive-docs/src/: App.vue  features-subpath.ts  main.ts  types.ts
interactive-docs/wasm/: Cargo.toml
interactive-docs/wasm/src/: subpath.rs
src/: lib.rs  polynomial.rs  utils.rs
src/bezier/: core.rs  lookup.rs  mod.rs  solvers.rs  transform.rs
src/bezier/poly_cool/: cubic.rs  mod.rs  poly.rs  quadratic.rs
src/subpath/: core.rs  lookup.rs  manipulators.rs  mod.rs  solvers.rs  structs.rs  transform.rs
