[package]
name = "bezier-rs"
version = "0.4.1"
rust-version = "1.79"
edition = "2021"
authors = ["Bezier-rs Authors"]
description = "Computational geometry algorithms for Bézier segments and shapes useful in the context of 2D graphics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/Keavon/Bezier-rs"
repository = "https://github.com/Keavon/Bezier-rs"
documentation = "https://keavon.github.io/Bezier-rs/"

[features]
std = ["glam/std"]

[dependencies]
# Required dependencies
glam = { version = "0.25", features = ["serde"] }

dyn-any = { version = "0.3.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = { version = "0.4", optional = true }
kurbo = { version = "0.11", optional = true }
