[package]
name = "bezier-rs"
version = "0.4.1"
rust-version = "1.85"
edition = "2024"
authors = ["Bezier-rs Authors"]
description = "Computational geometry algorithms for Bézier segments and shapes useful in the context of 2D graphics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/Keavon/Bezier-rs"
repository = "https://github.com/Keavon/Bezier-rs"
documentation = "https://keavon.github.io/Bezier-rs/"

[features]
std = ["glam/std"]

[dependencies]
# Required dependencies
glam = { version = "0.29", features = ["serde"] }
poly-cool = { version = "0.2" }

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
kurbo = { version = "0.11", optional = true }
