[package]
name = "bezier-rs-wasm"
publish = false
version = "0.0.0"
rust-version = "1.85"
authors = ["Bezier-rs Authors"]
edition = "2024"
readme = "../README.md"
homepage = "https://github.com/Keavon/Bezier-rs"
repository = "https://github.com/Keavon/Bezier-rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
logging = ["log"]

[dependencies]
bezier-rs = { path = "../..", package = "bezier-rs" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.92"
serde_json = "1.0"
js-sys = "=0.3.69"
glam = { version = "0.29", features = ["serde"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
log = "0.4"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(wasm_bindgen_unstable_test_coverage)',
] }
